--- a/Index.html
+++ b/Index.html
@@ -113,13 +113,13 @@
 
         @media screen and (max-width: 768px) {  
             .carousel-caption-custom h2 {
-            font-size: 1.4rem !important;
+            font-size: 2.5rem !important;
             line-height: 1 !important; 
 
         }
         
         .carousel-caption-custom p {
-            font-size: 12px !important;
+            font-size: 20px !important;
         }
         .card1{
             height: auto !important;
@@ -152,6 +152,9 @@
             z-index: 10;
             color: #fff;
         }
+.h50{
+    height: 50vh !important;
+}
 
         }
        
@@ -201,7 +204,7 @@
     </nav>
 
     <!-- Carousel -->
-    <div id="carouselExampleInterval" class="carousel slide carousel-wrapper" data-bs-ride="carousel">
+    <div id="carouselExampleInterval" class="carousel slide carousel-wrapper h50" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="2000">
                 <img src="./assets/slide-01.jpg" class="d-block w-100" alt="Slide 1">
