--- a/Index.html
+++ b/Index.html
@@ -218,7 +218,7 @@
                       today after 3 years of hard work and research they are presenting the solution to you.
                     </p>
                     <div class="d-flex gap-2">
-                        <a href="#" class="btn btn-success carousel-btn fw-bolder">Discover More</a>
+                        <a href="#services" class="btn btn-success carousel-btn fw-bolder">Discover More</a>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfB3xqF3bhMsSoRJZ9UptFt1wPPwE-J_uNkVbJiA4qVumk61Q/viewform?usp=sf_link" class="btn fw-bolder" style="background-color: #ff511a;">Contact Us</a>
                     </div>
                 </div>
