--- a/Index.html
+++ b/Index.html
@@ -236,7 +236,7 @@
                       lenders will automatically be safe, because except for 1-2%, 95-98% NPAs are caused by these
                       specified problems.</p>
                     <div class="d-flex gap-2">
-                        <a href="#" class="btn btn-success carousel-btn fw-bolder">Discover More</a>
+                        <a href="#services" class="btn btn-success carousel-btn fw-bolder">Discover More</a>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfB3xqF3bhMsSoRJZ9UptFt1wPPwE-J_uNkVbJiA4qVumk61Q/viewform?usp=sf_link" class="btn fw-bolder" style="background-color: #ff511a;">Contact Us</a>
                     </div>
                 </div>
@@ -249,7 +249,7 @@
                   <p>Transforming challenges into opportunities for micro, small, and medium enterprises facing payment
                     issues, Fraudulent activities and creating trustworthy market ecosystems.</p>
                     <div class="d-flex gap-2">
-                        <a href="#" class="btn btn-success carousel-btn fw-bolder">Discover More</a>
+                        <a href="#services" class="btn btn-success carousel-btn fw-bolder">Discover More</a>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfB3xqF3bhMsSoRJZ9UptFt1wPPwE-J_uNkVbJiA4qVumk61Q/viewform?usp=sf_link" class="btn fw-bolder" style="background-color: #ff511a;">Contact Us</a>
                     </div>
                 </div>
