--- a/Index.html
+++ b/Index.html
@@ -491,7 +491,7 @@
         <div class="container">
 <div class="row justify-content-center">
 <div class="col-lg-6">
-            <p class="text-white fs-5">Solviser india Pvt ltd, Gandhidham-Kutch, Gujarat-370201</p>
+            <p class="text-white fs-5">Solviser india Pvt Ltd</p>
             <p class="text-white fs-5"><span><i class="bi bi-envelope-at fs-5 text-danger"></i></span>  bnmishra@solviser.com </p>
            
                 
